Allow featureset configurations for record geomap based on main DocStruct